fix more deprecated code